src/test/pass/global_subscript_in_call.lly
var integer_list = [1, 2, 3]

define f() {
	integer_list[0] = 10
}

f()
