src/test/fail/basic_syntax/wrong_arg_count_parameter_func.lly
#[
SyntaxError: Function g expects 1 args, but got 3.
Where: File "wrong_arg_count_parameter_func.lly" at line 7
]#

define f(g: function(integer)) {
	g(1, 2, 3)
}
